--- a/symfony-docker-main/composer.json
+++ b/symfony-docker-main/composer.json
@@ -11,7 +11,7 @@
         "ext-iconv": "*",
         "api-platform/core": "^3.1",
         "doctrine/doctrine-bundle": "^2.10",
-        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/doctrine-migrations-bundle": "*",
         "doctrine/orm": "^2.16",
         "easycorp/easyadmin-bundle": "^4.7",
         "nelmio/cors-bundle": "^2.3",
