--- a/symfony-docker-main/config/packages/security.yaml
+++ b/symfony-docker-main/config/packages/security.yaml
@@ -19,13 +19,14 @@ security:
             custom_authenticator: App\Security\LoginAuthenticator
             logout:
                 path: app_logout
+                target: app_article_index
                 # where to redirect after logout
                 # target: app_any_route
 
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800
-                path: /
+                path: /article
                 always_remember_me: true
 
             # activate different ways to authenticate
@@ -38,7 +39,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
